--- a/btsite/src/index.css
+++ b/btsite/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Grandstander:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rosario:wght@600&display=swap');
 
 @font-face {
     font-family: "Luciole";
